# glassdoor-scrape

./: .env.template  .gitignore  README.md  Read data.ipynb  pyproject.toml  scrape_glassdoor.py
data/: data-analyst_florida.pickle  data-analyst_new-york.pickle  data-analyst_north-carolina.pickle  data-analyst_san-francisco.pickle  data-analyst_texas.pickle  data-engineer_florida.pickle  data-engineer_new-york.pickle  data-engineer_north-carolina.pickle  data-engineer_san-francisco.pickle  data-engineer_texas.pickle  data-science_florida.pickle  data-science_new-york.pickle  data-science_north-carolina.pickle  data-science_san-francisco.pickle  data-science_texas.pickle  data-scientist_florida.pickle  data-scientist_new-york.pickle  data-scientist_north-carolina.pickle  data-scientist_san-francisco.pickle  data-scientist_texas.pickle
other/: Model Building.ipynb
utils/: helpers.py
